# FestinoPumas

./: .gitignore  Key  README.md  clean.sh
PC_user/: depa_doc_paro.yaml  frames.gv
PC_user/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
PC_user/devel/include/robotino_msgs/: AnalogReadings.h  DigitalReadings.h  EncoderReadings.h  MotorReadings.h  PowerReadings.h  ResetOdometryRequest.h  ResetOdometryResponse.h  SetEncoderPositionRequest.h  SetEncoderPositionResponse.h
PC_user/devel/lib/pkgconfig/: robotino_description.pc  (+2 more)
PC_user/src/Hardware/Arm/Festino_arm_moveit_demos/: CMakeLists.txt  package.xml
PC_user/src/Hardware/Arm/Festino_arm_moveit_demos/src/: pick_place.cpp  prueba1.cpp  pruebaSrv.cpp
PC_user/src/Hardware/Arm/Festino_arm_moveit_demos/srv/: arm.srv  srv_arm.srv
PC_user/src/Navigation/: navega
PC_user/src/RvizConfig/: Robotino_M_Nav.rviz
PC_user/src/festino_tools/: CMakeLists.txt  package.xml
PC_user/src/grips_simulation/: CMakeLists.txt  Readme  package.xml
PC_user/src/surge_et_ambula/: package.xml
Robotino/devel/: .catkin  local_setup.sh  setup.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/robotino_msgs/: AnalogReadings.h  DigitalReadings.h  EncoderReadings.h  MotorReadings.h  PowerReadings.h  ResetOdometryRequest.h  ResetOdometryResponse.h  SetEncoderPositionRequest.h  SetEncoderPositionResponse.h
devel/lib/pkgconfig/: learning_joy.pc  robotino_description.pc  robotino_msgs.pc  robotino_node.pc  robotino_rest_node.pc
devel/lib/robotino_node/: robotino_camera_node  robotino_laserrangefinder_node  robotino_node  robotino_odometry_node
src/Hardware/learning_joy/: CMakeLists.txt  package.xml
(+265 files in other folders)
