<?xml version="1.0"?>
<package format="2">
  <name>Festino_arm_moveit_demos</name>
  <version>0.2.0</version>
  <description>
    Moveit demos for the PhantomX Pincher arm.
  </description>

  <author email="joshuayz@comunidad.unam.mx">FestinoPumasTeam</author>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
